# huggingface-transformers

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile.cuda12  devcontainer.json
.github/workflows/: ci.yml
docs/: architecture-deepdive-summary.md  pipeline-experiment-implementation-summary.md  transformer_architecture_experiment.md  transformers_pipeline_experiment.md
notebooks/: architecture_deepdive.ipynb  pipeline_exploration.ipynb
scripts/: run_architecture_experiment.sh  run_experiment.sh
src/: __init__.py  data.py  evaluate.py  experiment_runner.py
src/architecture_deepdive/: __init__.py  __main__.py  data.py  experiment_runner.py
src/architecture_deepdive/probes/: __init__.py  p1_model_timeline.py  p2_language_modeling.py  p3_transfer_learning.py  p4_model_anatomy.py  p5_attention_viz.py  p6_arch_comparison.py
src/architecture_deepdive/utils/: __init__.py  attention_tools.py  model_inspector.py  plotting.py
src/pipeline_exploration/: __init__.py  __main__.py  benchmarks.py  experiment_runner.py
src/pipeline_exploration/pipelines/: __init__.py  fill_mask.py  image_classification.py  ner.py  question_answering.py  speech_recognition.py  summarization.py  text_classification.py  text_generation.py  translation.py  zero_shot.py
src/pipelines/: __init__.py  fill_mask.py  image_classification.py  ner.py  question_answering.py  speech_recognition.py  summarization.py  text_classification.py  text_generation.py  translation.py  zero_shot.py
tests/: test_benchmarks.py  test_data.py  test_evaluate.py  test_experiment_runner.py
tests/architecture_deepdive/: __init__.py  test_data.py  test_experiment_runner.py
tests/architecture_deepdive/probes/: __init__.py  test_p1_model_timeline.py  test_p2_language_modeling.py  test_p3_transfer_learning.py  test_p4_model_anatomy.py  test_p5_attention_viz.py  test_p6_arch_comparison.py
tests/architecture_deepdive/utils/: __init__.py  test_attention_tools.py  test_model_inspector.py  test_plotting.py
tests/pipeline_exploration/: test_benchmarks.py  test_data.py  test_evaluate.py  test_experiment_runner.py
tests/pipeline_exploration/pipelines/: test_fill_mask.py  test_image_classification.py  test_ner.py  test_question_answering.py  test_speech_recognition.py  test_summarization.py  test_text_classification.py  test_text_generation.py  test_translation.py  test_zero_shot.py
tests/pipelines/: test_fill_mask.py  test_image_classification.py  test_ner.py  test_question_answering.py  test_speech_recognition.py  test_summarization.py  test_text_classification.py  test_text_generation.py  test_translation.py  test_zero_shot.py
