[project]
name = "huggingface-transformers"
version = "0.1.0"
description = "Experiment models from Huggingface Transformers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core ML/DL frameworks
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    
    # Hugging Face ecosystem
    "transformers>=4.46.0",
    "datasets>=3.2.0",
    "huggingface-hub[hf-transfer]>=0.27.0",
    "accelerate>=1.2.0",
    "tokenizers>=0.20.0",
    "safetensors>=0.4.0",
    
    # Optimization and fine-tuning
    "optimum>=1.23.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "bitsandbytes>=0.44.0",
    
    # ONNX Runtime
    "onnx>=1.17.0",
    "onnxruntime-gpu>=1.20.0",
    
    # NLP utilities
    "sentencepiece>=0.2.0",
    "protobuf>=5.28.0",
    
    # Data and visualization
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "pillow>=11.0.0",
    "opencv-python>=4.10.0",
    
    # Experiment tracking
    "tensorboard>=2.18.0",
    "wandb>=0.19.1",
    
    # Utilities
    "tqdm>=4.67.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "thop>=0.1.1.post2209072238",
]
[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.5",
  "black>=24.0.0",
  "ruff>=0.6.0",
  "isort>=5.13.0",
  "pre-commit>=3.5.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.8.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

